# osynic_pad

./: Cargo.toml  README.md  README_EN.md
configs/: pad_config.json  pad_config_em.json  pad_config_mid.json  pad_config_top.json
docs/: BUILD_SUMMARY.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.txt  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  LIBRARY_INTEGRATION.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  README_EN.md  REFACTORING_REPORT.md  USAGE.md
examples/: a.rs  agilo.rs  cli.rs  library_usage.rs
src/: cli.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  mapper.rs
