[package]
name = "osynic_pad"
version = "0.1.0"
edition = "2024"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
rust-version = "1.85.0"
description = "A gamepad -> keyboard mapper for the Osynic"
keywords = ["osynic", "pad", "tui", "mapper"]
categories = ["games","command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/osynic_pad"
repository = "https://github.com/osynicite/osynic_pad"

[[bin]]
name = "osynic-pad"
path = "src/main.rs"

[lib]
name = "osynic_pad"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.51.1", features = ["sync","time","macros","rt-multi-thread","signal"]}

enigo = "0.6.1"
gilrs = "0.11.1"

clap = { version = "4.6.0", features = ["derive"] , optional = true}
inquire = { version = "0.9.4", optional = true }

[features]
default = ["lib","cli"]
full = ["lib","cli"]
cli = ["clap", "inquire"]
lib = []